[tool.poetry]
name = "data-api"
version = "0.1.0"
description = ""
authors = ["Our World In Data <tech@worldindata.org>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.17.6"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
pandas = "^1.4.2"
SQLAlchemy = "^1.4.37"
mysqlclient = "^2.1.0"
owid-catalog = "^0.2.9"
rich = "^12.4.4"
typer = "^0.4.1"
duckdb = "^0.3.4"
duckdb-engine = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^22.3.0"
ipykernel = "^6.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
